@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST blockdiag-0.3.1.tar.gz 17840 RMD160 f1defe1c056c5a1b195bad49aa7e4c65e26a21bb SHA1 60ac831e3164205d9a554f503c77e0c0140b421e SHA256 0c5e9eba4b52f888f446579a39a50cd1a5a4e860fbe3f42be60a9f54e2e008ad
 DIST blockdiag-0.4.tar.gz 30859 RMD160 2c7473491bd5e69fe1dce076c52822170e1b4c9e SHA1 495c91c0edfe7caf7a8b5afed8f04d8cf498a1f9 SHA256 23726e0afb2f774a92e5b0fd05afee0a216d6ce0796c737fda098864abb60fb7
 DIST blockdiag-0.5.1.tar.gz 34128 RMD160 ddfbd502993ee355fdf4224321eff4d025dd125e SHA1 19251fe869ed8347d3015fb2b8ea1af3a2b7e60c SHA256 178fea56291b417b04ddb1c8b53a0cf7b94727403c8a757b43b363f35c034148
-EBUILD blockdiag-0.3.1.ebuild 899 RMD160 db822c6cb06a9ff99deb2c82176315b51c8085e2 SHA1 a5b7ad9a732127e1b2fdf877df033505fa03bb09 SHA256 f91c0a3c9243537cfcac446e298c253ca0df75ae336167e74b2893bf521a7c47
-EBUILD blockdiag-0.4.ebuild 900 RMD160 953dc505e71cc0585bb46464b489193ec139b0e9 SHA1 2b7ab20ca8a46214c9c70edc63c78595900be858 SHA256 1e4ceff69092e1adca35c7e8201a5d0e5842856be772fdadd91c5433820e45b2
+EBUILD blockdiag-0.4.ebuild 899 RMD160 db822c6cb06a9ff99deb2c82176315b51c8085e2 SHA1 a5b7ad9a732127e1b2fdf877df033505fa03bb09 SHA256 f91c0a3c9243537cfcac446e298c253ca0df75ae336167e74b2893bf521a7c47
 EBUILD blockdiag-0.5.1.ebuild 901 RMD160 20420e3732f0fce5d80e4607a14987986ffb3d4d SHA1 356774fa173698409385fd296f0959d69ce7cb13 SHA256 83552cf37343360dd28c0b2fc51ee2d3354eff7a687308dbcc9c8fd0aacd7b33
-MISC ChangeLog 960 RMD160 315de8602e04b7a8d6f3a58d27b077415e26465b SHA1 1d44d37f117eb894916bfa58e1c9e1cefc67e65e SHA256 50393aa78e105d245c0dd78bb60ffc63c6aa80bd8727e9e46a5dfc98b7563776
+MISC ChangeLog 1072 RMD160 810691590506bdd90db6011f5df99820aa022996 SHA1 1ef19c3e50aafb2132d094373a36fcd42daba71b SHA256 d0df010226753c30fa7c27a6bc94c3fed2de738ffb84df4405ff2cddf85b0b98
 MISC metadata.xml 669 RMD160 dcb67ada7b260b3ce4d5b5ec3f66ce2193ea2413 SHA1 22302b9b620dfb15f8c13137c866a5ac587e86e9 SHA256 24d91965daa15b89c7a8fa1e6eefaa6d459645d881cd67a1738198253cebd533
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkzWipQACgkQzJrj3cAXR0kA/ACeOlvAS3wHuRhQdd5lb0r3ihJq
-soYAn3zG0Kny+EkvTTJuYRNgm2zuy61Z
-=a82u
+iEYEARECAAYFAkzZTHYACgkQzJrj3cAXR0lZawCgtpC5f42yUtz46TlXrp1MAkAz
+4mEAn0mIL62CJieOPkGQ1bqSoS2lCHy6
+=chbh
 -----END PGP SIGNATURE-----
