@@ -1,5 +1,4 @@
 REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 dev-python/mod2doctest-0.2.0 %a
-REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/blockdiag-0.4 %a
 REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sphinxcontrib-blockdiag-0.4 %a
 REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 media-gfx/sphinxcontrib-blockdiag-0.4 %a
 REM 2010-11-07 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 media-gfx/sng-1.0.2-r1 %a
