@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Nov 2010; James Rowe <jnrowe@gmail.com> -blockdiag-0.3.1.ebuild,
+  blockdiag-0.4.ebuild:
+  Keyworded x86.
+
   07 Nov 2010; James Rowe <jnrowe@gmail.com> blockdiag-0.4.ebuild:
   Keyworded amd64.
 
